fix homepage on mobile

--- a/src/view/Browse.css
+++ b/src/view/Browse.css
@@ -75,5 +75,15 @@
     .spotlight-container {
         width: 80% !important;
     }
+
+    .features {
+        grid-template-columns: repeat(1, 1fr);
+    }
+    .hero {
+        padding: 10px;
+    }
+    .hero p {
+        display: none;
+    }
 }
 
